#1093: wip add support for multi aggregate ids in FactSpec